# pyscraping

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: python-app.yml
