[project]
name = "pyscraping"
version = "0.1.0"
description = "Tool to scrap some products on defined website"
authors = [
    {name = "TheDarkNine"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "arrow (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
